# deno_sdl2

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  bindings.json  byte_type.ts  canvas.ts  client.ts  deno.jsonc  example.ts  mod.ts  msg.ts  tcp.js
.github/workflows/: build.yml  ci.yml
bindings/: bindings.ts
examples/: ball.ts  bouncy_rects.ts  font.ts  hello.ts  raw_window_handle.ts  resizable_window.ts  shader.glsl  shader.wgsl  shadertoy.ts  stars.ts  texture.ts  utils.ts
examples/boids/: boids.ts  shader.wgsl
examples/font/: font.ts
examples/sprite/: README.md  main.ts  util.ts
examples/texture/: logo.yuv  texture.ts
examples/wgpu/: shader.wgsl  wgpu.ts
lib/: canvas.ts  ffi.ts  mod.ts  texture.ts
src/: canvas.ts  events.rs  font.ts  lib.rs  main.rs  msg.ts  pixel.ts  shapes.rs  tasks.rs  update.rs
tests/: basic.ts  mp3_flag.ts  sdl2_image_test.ts  system.ts
webgpu-examples/: README.md  babylon.ts  gameoflife.ts  orillusion.ts  rasterizer.ts
webgpu-examples/boids/: boids.ts  compute.wgsl  shader.wgsl
