[package]
name = "deno_sdl2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-vcpkg = ["sdl2/use-vcpkg", "sdl2/static-link"]

[dependencies]
sdl2 = { version = "0.34.5", features = ["ttf", "image", "mixer"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.42"

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer[mpg123]"]
git = "https://github.com/microsoft/vcpkg"
rev = "261c458af6e3eed5d099144aff95d2b5035f656b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static", dependencies = ["yasm", "sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer[mpg123]"] }
