[package]
name = "deno_sdl2"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/littledivy/deno_sdl2"

[features]
default = []
use-vcpkg = ["sdl2/use-vcpkg", "sdl2/static-link"]

[dependencies]
sdl2 = { version = "0.34.5", features = ["ttf", "image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.42"
rodio = "0.14.0"

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "025e564979cc01d0fbc5c920aa8a36635efb01bb"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dependencies = ["yasm", "sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx"] }
